k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transport-ingress
  namespace: transport-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # 🔹 Backend FIRST
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000

          # 🔹 Frontend SECOND
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
